--- a/app/src/main/res/layout/activity_sync.xml
+++ b/app/src/main/res/layout/activity_sync.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <com.zs.various.view.BorderTextView
         android:id="@+id/tv_start"
@@ -17,9 +18,6 @@
         android:text="开启线程"
         android:textColor="@color/white"
         android:gravity="center"/>
-
-
-
 
 
 </android.support.constraint.ConstraintLayout>
