--- a/app/src/main/res/layout/activity_constrain_layout.xml
+++ b/app/src/main/res/layout/activity_constrain_layout.xml
@@ -53,13 +53,18 @@
             app:layout_constraintLeft_toRightOf="@+id/tv_header"
             android:layout_marginLeft="10dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_title"
-
+            android:layout_marginTop="10dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="10dp"
             />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorAccent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
 
