--- a/app/src/main/res/layout/activity_rxjava.xml
+++ b/app/src/main/res/layout/activity_rxjava.xml
@@ -5,6 +5,11 @@
     android:layout_height="match_parent">
 
 
+    <ImageView
+        android:id="@+id/iv_image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        />
 
 
 </android.support.constraint.ConstraintLayout>
