--- a/app/src/main/res/layout/activity_tab_layout.xml
+++ b/app/src/main/res/layout/activity_tab_layout.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:tabIndicatorColor="@color/colorPrimary"
-        app:tabIndicatorHeight="4dp">
+        app:tabIndicatorHeight="4dp"
+        >
 
     </android.support.design.widget.TabLayout>
 
