--- a/app/src/main/res/layout/activity_constrain_layout.xml
+++ b/app/src/main/res/layout/activity_constrain_layout.xml
@@ -155,5 +155,11 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="400dp"/>
 
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.8" />
+
 
 </android.support.constraint.ConstraintLayout>
