--- a/app/src/main/res/layout/fragment_pager_item.xml
+++ b/app/src/main/res/layout/fragment_pager_item.xml
@@ -20,14 +20,39 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:orientation="vertical"
-        android:background="@color/colorPrimary">
+        >
+
+        <View
+            android:id="@+id/view_status_bar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/status_bar_height"
+            android:background="@color/colorPrimary"
+            android:visibility="visible"/>
 
         <TextView
             android:id="@+id/tv_pager_num"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="page = "
-            android:background="@color/color_3"/>
+            />
+
+        <Button
+            android:id="@+id/btn_set_light_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="64dp"
+            android:padding="16dp"
+            android:text="Set Light Mode"/>
+
+        <Button
+            android:id="@+id/btn_set_dark_mode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:padding="16dp"
+            android:text="Set Dark Mode"/>
 
     </LinearLayout>
 
