--- a/app/src/main/res/layout/activity_sync.xml
+++ b/app/src/main/res/layout/activity_sync.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
-    <com.zs.various.view.BorderTextView
+    <com.zs.border.view.BorderTextView
         android:id="@+id/tv_start"
         android:layout_width="150dp"
         android:layout_height="50dp"
