--- a/app/src/main/res/layout/activity_behavior.xml
+++ b/app/src/main/res/layout/activity_behavior.xml
@@ -95,7 +95,8 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         app:layout_anchor="@id/main_fl_title"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark">
+        app:theme="@style/ThemeOverlay.AppCompat.Dark"
+        >
 
         <LinearLayout
             android:layout_width="wrap_content"
