--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -4,28 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:openDrawer="left">
+        tools:openDrawer="right">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            >
+
+            <Button
+                android:id="@+id/btn_open"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:background="@color/color_3"
+                android:layout_margin="30dp"
+                android:text="open"
+                android:textColor="@color/white"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"/>
 
         </android.support.constraint.ConstraintLayout>
 
-        <LinearLayout
-            android:layout_width="220dp"
+        <RelativeLayout
+            android:id="@+id/drawer_content"
+            android:layout_width="300dp"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimary"
-            android:layout_gravity="left"
-            >
+            android:layout_gravity="right"
+            android:visibility="visible">
 
-        </LinearLayout>
+            <LinearLayout
+                android:layout_above="@+id/view_bottom"
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary"
+                android:orientation="vertical">
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="100dp"/>
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="100dp"/>
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="100dp"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/view_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="确定"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:background="@color/color_3"
+                android:layout_alignParentBottom="true"/>
+
+        </RelativeLayout>
 
 
     </android.support.v4.widget.DrawerLayout>
