--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -39,42 +39,51 @@
             android:background="@color/colorPrimary"
             android:visibility="visible">
 
-            <android.support.v4.widget.NestedScrollView
+            <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorPrimary">
+                android:scrollbars="none"
+                android:background="@color/white"
+                android:layout_above="@+id/view_bottom">
 
                 <LinearLayout
                     android:layout_width="300dp"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <EditText
+                    <View
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:layout_marginTop="100dp"/>
+                        android:background="@color/colorPrimary"/>
 
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_marginTop="100dp"/>
 
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="100dp"
+                        android:text="数据测试"/>
+
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:layout_marginTop="150dp"/>
+                        android:layout_marginTop="150dp"
+                        android:text="aaa"/>
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recycler_view"
                         android:layout_width="match_parent"
-                        android:layout_height="300dp"
-                        >
+                        android:layout_height="100dp"
+                        android:scrollbars="none">
 
                     </android.support.v7.widget.RecyclerView>
 
                 </LinearLayout>
 
-            </android.support.v4.widget.NestedScrollView>
+            </ScrollView>
 
             <TextView
                 android:id="@+id/view_bottom"
