--- a/app/src/main/res/layout/item_choice_title.xml
+++ b/app/src/main/res/layout/item_choice_title.xml
@@ -11,7 +11,6 @@
         android:text="ddd"
         android:textSize="16dp"
         android:textColor="@color/font_gray"
-        android:gravity="center_vertical"
-        android:paddingLeft="16dp"/>
+        android:gravity="center_vertical" />
 
 </android.support.constraint.ConstraintLayout>
