--- a/app/src/main/res/layout/activity_choice_layout.xml
+++ b/app/src/main/res/layout/activity_choice_layout.xml
@@ -1,25 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="40dp"
-        android:text="choice"
-        android:layout_margin="10dp"
-        android:onClick="backData"/>
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_grid"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:paddingLeft="15dp"
-        android:paddingRight="15dp">
+        android:paddingRight="15dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/cl_action"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
     </android.support.v7.widget.RecyclerView>
 
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/cl_action"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintTop_toBottomOf="@+id/recycler_grid"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-</LinearLayout>
+
+        <Button
+            android:id="@+id/btn_get"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:text="已选"
+            android:layout_margin="10dp"
+            android:onClick="getData"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <Button
+            android:id="@+id/btn_back"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:text="重置"
+            android:layout_margin="10dp"
+            android:onClick="backData"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/btn_get"/>
+
+        <TextView
+            android:id="@+id/tv_show"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/btn_get"
+            android:layout_marginTop="10dp"/>
+
+
+
+    </android.support.constraint.ConstraintLayout>
+
+
+</android.support.constraint.ConstraintLayout>
