--- a/app/src/main/res/layout/activity_dispatch_move_layout.xml
+++ b/app/src/main/res/layout/activity_dispatch_move_layout.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -34,34 +33,6 @@
 
             </HorizontalScrollView>
 
-            <com.zs.various.view.dispatch.TestScrollView
-                android:layout_width="match_parent"
-                android:layout_height="200dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:background="@color/color_6"/>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="300dp"
-                        android:background="@color/colorAccent"/>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:background="@color/color_6"/>
-
-                </LinearLayout>
-
-            </com.zs.various.view.dispatch.TestScrollView>
-
             <View
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
@@ -71,5 +42,13 @@
 
     </ScrollView>
 
+    <com.zs.various.view.dispatch.ViewBack
+        android:id="@+id/view_back"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@color/color_4"
+        android:layout_alignParentBottom="true"
+        >
+    </com.zs.various.view.dispatch.ViewBack>
 
 </RelativeLayout>
