--- a/app/src/main/res/layout/radar_layout.xml
+++ b/app/src/main/res/layout/radar_layout.xml
@@ -2,12 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+
     >
 
-    <com.zs.various.view.RadarView
-        android:id="@+id/radarview"
+    <!--<com.zs.various.view.RadarView-->
+        <!--android:id="@+id/radarview"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:visibility="gone"/>-->
+
+
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="visible">
+
+        <com.zs.various.view.CustomView
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:background="@color/color_4"/>
+
+    </LinearLayout>
 
 </LinearLayout>
