--- a/app/src/main/res/layout/merge_layout.xml
+++ b/app/src/main/res/layout/merge_layout.xml
@@ -13,6 +13,7 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:text="test"/>
 
 </merge>
