--- a/app/src/main/res/layout/radar_layout.xml
+++ b/app/src/main/res/layout/radar_layout.xml
@@ -5,19 +5,24 @@
 
     >
 
-    <!--<com.zs.various.view.RadarView-->
-        <!--android:id="@+id/radarview"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:visibility="gone"/>-->
+    <com.zs.various.view.RadarView
+        android:id="@+id/radarview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 
-
+    <com.zs.various.view.CircleView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="200dp"
+        android:visibility="visible"/>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <com.zs.various.view.CustomView
             android:layout_width="wrap_content"
