--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -123,7 +123,17 @@
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
-            android:background="@color/color_0"/>
+            android:background="@color/color_0"
+            />
+
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:background="@drawable/btn_shadow_bg"
+            android:layout_margin="30dp"
+            android:text="确定"
+            android:gravity="center"
+            android:textColor="@color/white"/>
 
         <TextView
             android:id="@+id/tv_auto"
