--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -127,8 +127,9 @@
             />
 
         <TextView
-            android:layout_width="150dp"
-            android:layout_height="30dp"
+            android:id="@+id/tv_complete"
+            android:layout_width="200dp"
+            android:layout_height="48dp"
             android:background="@drawable/btn_shadow_bg"
             android:layout_margin="30dp"
             android:text="确定"
