--- a/app/src/main/res/layout/activity_custom_view2.xml
+++ b/app/src/main/res/layout/activity_custom_view2.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/white"
     tools:context="com.zs.various.activity.CustomViewActivity">
@@ -17,4 +18,19 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         />
+
+    <com.zs.various.view.RoundImageView
+        android:id="@+id/round_img"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:src="@drawable/bg_girl"
+        android:scaleType="centerCrop"
+        app:border_width="2dp"
+        app:corner_bottom_left_radius="4dp"
+        app:corner_top_left_radius="45dp"
+        app:corner_top_right_radius="4dp"
+        app:corner_bottom_right_radius="45dp"
+        app:border_color="@color/blue"
+        app:mask_color="@color/dialog_tran_color"/>
+
 </LinearLayout>
