--- a/app/src/main/res/layout/activity_notification_layout.xml
+++ b/app/src/main/res/layout/activity_notification_layout.xml
@@ -9,13 +9,13 @@
         android:id="@+id/btn_1"
         android:layout_width="120dp"
         android:layout_height="50dp"
-        android:text="通知"/>
+        android:text="通知1"/>
 
     <Button
         android:id="@+id/btn_2"
         android:layout_width="120dp"
         android:layout_height="50dp"
-        android:text="通知自定义"
+        android:text="通知2"
         app:layout_constraintTop_toBottomOf="@+id/btn_1"
         android:layout_marginTop="10dp"/>
 
