--- a/app/src/main/res/layout/view_message.xml
+++ b/app/src/main/res/layout/view_message.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/tv_msg_one"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp_20"
         android:text="message 1"
         android:textSize="@dimen/sp_16"
         android:textColor="@color/blue_show"
@@ -16,7 +16,7 @@
     <TextView
         android:id="@+id/tv_msg_two"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp_20"
         android:text="message 2"
         android:textSize="@dimen/sp_16"
         android:textColor="@color/planbook_default"
@@ -26,7 +26,7 @@
     <TextView
         android:id="@+id/tv_msg_three"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/dp_20"
         android:text="message 3"
         android:textSize="@dimen/sp_16"
         android:layout_below="@+id/tv_msg_one"
