--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="com.zs.various.activity.CustomViewActivity">
+    tools:context="com.zs.various.activity.CustomViewFirstActivity">
 
     <com.flaviofaria.kenburnsview.KenBurnsView
         android:id="@+id/image_custom"
