--- a/app/src/main/res/layout/activity_custom_view2.xml
+++ b/app/src/main/res/layout/activity_custom_view2.xml
@@ -13,32 +13,48 @@
         android:layout_height="300dp"
         />
 
-    <com.zs.various.view.RoundImageView
-        android:id="@+id/round_img"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:scaleType="centerCrop"
-        app:border_width="2dp"
-        app:corner_bottom_left_radius="4dp"
-        app:corner_top_left_radius="45dp"
-        app:corner_top_right_radius="4dp"
-        app:corner_bottom_right_radius="45dp"
-        app:border_color="@color/blue"
-        app:mask_color="@color/dialog_tran_color"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <com.zs.various.view.MessageView
+        <com.zs.various.view.ShadowView
+            android:id="@+id/shadow_img"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/round_img"
+            android:layout_marginTop="-80dp"/>
+
+        <com.zs.various.view.RoundImageView
+            android:id="@+id/round_img"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:scaleType="centerCrop"
+            app:corner_radius="@dimen/dp_10"
+            android:layout_centerHorizontal="true"
+            android:visibility="visible"/>
+
+    </RelativeLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginTop="@dimen/dp_10">
 
-    </com.zs.various.view.MessageView>
+        <com.zs.various.view.MessageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <com.zs.various.view.MessageView2
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10">
+        </com.zs.various.view.MessageView>
 
-    </com.zs.various.view.MessageView2>
+        <com.zs.various.view.MessageView2
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </com.zs.various.view.MessageView2>
+        
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv_limit"
@@ -58,14 +74,6 @@
         android:id="@+id/tv_limit2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="@color/colorAccent"/>
-
-
-
 
 
 </LinearLayout>
