--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -87,6 +87,7 @@
     </declare-styleable>
 
     <declare-styleable name="RoundImageView">
+        <attr name="is_cover_src" format="boolean" />
         <attr name="is_circle" format="boolean" />
         <attr name="corner_radius" format="dimension" />
         <attr name="corner_top_left_radius" format="dimension" />
