--- a/app/src/main/res/layout/activity_custom_view2.xml
+++ b/app/src/main/res/layout/activity_custom_view2.xml
@@ -14,8 +14,32 @@
         />
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
+        <com.zs.various.view.ShadowLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.zs.various.view.RoundImageView
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:scaleType="centerCrop"
+                app:corner_radius="@dimen/dp_10"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/bg_girl"/>
+
+
+        </com.zs.various.view.ShadowLayout>
+
+    </RelativeLayout>
+
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone">
 
         <com.zs.various.view.ShadowView
             android:id="@+id/shadow_img"
@@ -23,7 +47,7 @@
             android:layout_height="90dp"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/round_img"
-            android:layout_marginTop="-80dp"/>
+            android:layout_marginTop="-75dp"/>
 
         <com.zs.various.view.RoundImageView
             android:id="@+id/round_img"
