--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -101,4 +101,19 @@
         <attr name="mask_color" format="color" />
     </declare-styleable>
 
+
+    <!-- ShadowLayout 阴影 -->
+    <declare-styleable name="ShadowLayout">
+        <attr name="shadowColor" format="color"/>
+        <attr name="shadowDx" format="dimension"/>
+        <attr name="shadowDy" format="dimension"/>
+        <attr name="shadowRadius" format="dimension"/>
+        <attr name="shadowLayoutRadius" format="dimension"/>
+        <attr name="shadowHeight" format="dimension"/>
+        <attr name="shadowShape">
+            <flag name="rectangle" value="0x0001"/>
+            <flag name="oval" value="0x0010"/>
+        </attr>
+    </declare-styleable>
+
 </resources>
